--- a/Complex Analysis/Review Doc/Complex_Analysis_Qual_Notes.tex
+++ b/Complex Analysis/Review Doc/Complex_Analysis_Qual_Notes.tex
@@ -208,7 +208,7 @@ Some other useful facts about the hyperbolic exponentials:
   \(\cosh(z + i\pi) = -\cosh(z)\) and \(\sinh(z + i\pi) = -\sinh(z)\).
 \item
   \(\cosh\) has zeros at
-  \(\left\{{i\pi\qty{2k+1\over 2}}\right\} = \ts{i \qty{\pi/2 + k\pi}\),
+  \(\left\{{i\pi\qty{2k+1\over 2}}\right\} = \left\{{i \qty{\pi/2 + k\pi}}\right\}\),
   i.e.~\(\cdots, -\pi/2, \pi/2, 3\pi/2,\cdots\), the half-integers.
 \item
   \(\sinh\) has zeros at \(\left\{{i\pi k}\right\}\), i.e.~the integers.
